# Trend-Spotter

./: .coverage  .env.example  .gitignore  Dockerfile  MVP Prompt.md  README.md  __init__.py  classification.py  clustering.py  config.py  docker-compose.yml  durability.py  main.py  prediction_store.py  pyproject.toml  query_router.py  ranking.py  requirements.md  retrieval.py  roadmap.md  scoring.py  signal.py  snapshot.py  strategic brief.md
docs/: requirements.md  roadmap.md
src/trend_spotter/: __init__.py  __main__.py  classification.py  cli.py  config.py  cross_domain.py  pipeline.py  ranking.py  signal.py
src/trend_spotter/api/: __init__.py  app.py  auth.py  models.py  tasks.py
src/trend_spotter/api/routes/: accuracy.py  cross_domain.py  health.py  metrics.py  predictions.py  scans.py
src/trend_spotter/evaluation/: __init__.py  evaluator.py  scheduler.py  weight_tuning.py
src/trend_spotter/ingestion/: __init__.py  clustering.py  query_router.py  retrieval.py  sources.py
src/trend_spotter/persistence/: __init__.py  prediction_store.py  snapshot.py
src/trend_spotter/scoring/: __init__.py  acceleration.py  durability.py  mentions.py
tests/: test_api.py  test_classification.py  test_cli.py  test_cross_domain.py  test_durability.py  test_evaluation.py  test_evaluator_integration.py  test_ingestion.py  test_pipeline.py  test_prediction_store.py  test_scheduler.py  test_scoring.py  test_snapshot.py  test_sources.py  test_weight_tuning.py
